# docxy

./: .gitattributes  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GAP-ANALYSIS.md  LOOKXY.md  PROJECT.md  README.md  SECURITY.md  SIGNING.md  SPREADSHEET.md  VSCODE.md  codecov.yml  untitled.docx
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml  scorecard.yml
assets/: sample.docx
backstagecore/: Cargo.toml
backstagecore/src/: confirm.rs  host.rs  input.rs  lib.rs  menu.rs  render.rs  start.rs  state.rs
compare/: App.xaml  App.xaml.cs  CompareLauncher.csproj  MainWindow.xaml  MainWindow.xaml.cs  Models.cs  README.md  Win32.cs
compare-xlsx/: App.xaml  App.xaml.cs  CompareLauncher.csproj  MainWindow.xaml  MainWindow.xaml.cs  Models.cs  README.md  Win32.cs
comshimcore/: Cargo.toml
comshimcore/src/: lib.rs  typelib.rs
corpus/: README.md  classification-xlsx.json  classification.json
corpus/mpp/: .gitignore  README.md
corpus/mspdi/: 01-single-task.xml  02-link-fs.xml  03-link-ss.xml  04-link-ff.xml  05-link-sf.xml  06-lag.xml  07-lead.xml  08-milestone.xml  09-constraint-snet.xml  10-summary.xml  11-resource-assignment.xml  12-calendar-6day.xml  README.md  manifest.json
corpus/tools/: classify.py  classify_xlsx.py  fetch-mpp-corpus.ps1  fetch-mpp-corpus.sh  gen_mspdi_corpus.py  gen_xlsx_corpus.py
corpus/xlsx/: README.md  calc-arithmetic.xlsx  calc-criteria.xlsx  calc-dates.xlsx  calc-financial.xlsx  calc-logic.xlsx  calc-lookup.xlsx  calc-math.xlsx  calc-refs.xlsx  calc-stats.xlsx  calc-text.xlsx  calc-textfmt.xlsx  edge-cases.xlsx  oracle-basic.xlsx  shape-amortization.xlsx  shape-gradebook.xlsx  shape-salestable.xlsx
ctlcore/: Cargo.toml
ctlcore/src/: client.rs  json.rs  lib.rs  mcp.rs
docs/: agent-control.md  lookxy-test-plan.md
docxcore/: Cargo.toml
docxcore/benches/: docx.rs
docxcore/examples/: dump_doc.rs  dump_geo.rs  gen_sample.rs
docxcore/src/: agent.rs  chart.rs  comments.rs  editor.rs  equation.rs  export.rs  field.rs  latex.rs  lib.rs  load.rs  markdown.rs  mathbox.rs  mermaid.rs  mermaid_embed.rs  mermaid_seq.rs  model.rs  notes.rs  numbering.rs  omath.rs  package.rs  render.rs  serialize.rs  styles.rs  zip.rs  zipwrite.rs
docxcore/tests/: docx_integration.rs
docxcore/tests/fixtures/: sample.docx
docxwasm/: Cargo.toml
docxwasm/src/: bridge.rs  json.rs  lib.rs
docxy/: Cargo.toml
docxy-vscode/: CHANGELOG.md  README.md  package-lock.json  package.json
docxy-vscode/media/: webview.css  webview.js
docxy-vscode/src/: engine.ts  extension.ts
docxy/src/: backstage.rs  control.rs  main.rs  mcp.rs  metafile.rs  ribbon.rs  skill.rs
editcore/: Cargo.toml
editcore/src/: cursor.rs  history.rs  lib.rs  model.rs  ops.rs
gridcore/: Cargo.toml
gridcore/benches/: engine.rs
gridcore/examples/: gen_sample_xlsx.rs
gridcore/src/: cf.rs  comments.rs  drawing.rs  edit.rs  engine.rs  format.rs  formula.rs  frame.rs  lib.rs  model.rs  numfmt.rs  pivot.rs  pivotcalc.rs  sheet.rs  stats.rs  xlsx.rs
gridcore/tests/: conformance.rs  roundtrip.rs
gridwasm/: Cargo.toml
gridwasm/src/: bridge.rs  json.rs  lib.rs
lookxy/: Cargo.toml
lookxy/src/: app.rs  config.rs  control.rs  datetime.rs  main.rs  mcp.rs  skill.rs
lookxy/src/ui/: attachments.rs  backstage.rs  calendar.rs  categories.rs  categorypicker.rs  compose.rs  eventform.rs  filepicker.rs  folders.rs  foldertree.rs  freebusy.rs  help.rs  linkprompt.rs  message_list.rs  mod.rs  oofform.rs  rail.rs  reading.rs  ribbon.rs  search.rs  signin.rs  status_bar.rs
mailcore/: Cargo.toml
mailcore/src/: auth.rs  compose_html.rs  htmlrender.rs  json.rs  lib.rs  pkce.rs  testserver.rs  thread.rs  tokencache.rs
mailcore/src/graph/: client.rs  mod.rs  model.rs
mailcore/src/store/: mod.rs  schema.rs
mailcore/src/sync/: engine.rs  mod.rs  outbox.rs
mppread/: Cargo.toml
mppread/examples/: inspect.rs  streams.rs  tasknames.rs
mppread/src/: cfb.rs  lib.rs  mpp.rs  oleps.rs  vardata.rs  varmeta.rs
mppread/tests/: real_mpp.rs
offxy-jetbrains/: .gitignore  CHANGELOG.md  README.md  TESTPLAN.md  build.gradle.kts  gradle.properties  settings.gradle.kts
offxy-vscode/: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  MERMAID-TEST-PLAN.md  README.md  TEST-PLAN.md  package-lock.json  package.json  tsconfig.json
offxy-vscode/mcp/: parity.test.mjs  server.mjs  tools-expected.json
offxy-vscode/media/: grid.css  grid.js  grid.layout.test.mjs  markdown-roundtrip.test.mjs  mermaid-embed.test.mjs  mermaid-live.test.mjs  mermaid-render.test.mjs  mermaid-svg.test.mjs  webview.css  webview.js
offxy-vscode/scripts/: copy-mermaid.mjs  copy-wasm.mjs
offxy-vscode/src/: ctlserver.ts  extension.ts  gridengine.ts
opccore/: Cargo.toml
opccore/benches/: opc.rs
opccore/benches/fixtures/: sample.deflate
opccore/src/: inflate.rs  lib.rs  xml.rs
projcore/: Cargo.toml
projcore/examples/: convert.rs  gantt_md.rs
projcore/src/: datetime.rs  gantt.rs  lib.rs  model.rs  mspdi.rs  schedule.rs  yppx.rs
projcore/tests/: corpus.rs
ribboncore/: Cargo.toml
ribboncore/src/: lib.rs
scripts/mmcompare/: README.md  package-lock.json  package.json  render.mjs
site/: index.html
suite/: Cargo.toml
suite/docxy/: Cargo.toml
suite/docxy-ui/: Cargo.toml
suite/docxy-ui/src/: main.rs
suite/docxy/src/: main.rs
suite/officexy/: Cargo.toml
suite/officexy/src/: main.rs
tools/: package-shims.ps1  run-conformance.ps1
tools/claude-plugin/: README.md
tools/comshim-tests/: excel-smoke.vbs  graceful-smoke.vbs  verify.ps1
wordcomshim/: Cargo.toml  README.md
wordcomshim/src/: gen_word.rs  lib.rs  main.rs
wordcomshim/tests/: typelib_faithful.rs
xlcomshim/: Cargo.toml  README.md
xlcomshim/src/: gen_excel.rs  lib.rs  main.rs
xlcomshim/tests/: typelib_faithful.rs
xlsxy/: Cargo.toml
xlsxy/src/: backstage.rs  control.rs  main.rs  mcp.rs  ribbon.rs  skill.rs
yppxy/: Cargo.toml
yppxy/src/: backstage.rs  control.rs  main.rs  mcp.rs  ribbon.rs  skill.rs
(+185 files in other folders)
