[workspace]
resolver = "2"
members = ["opccore", "docxcore", "gridcore", "ctlcore", "docxy", "xlsxy", "projcore", "yppxy", "mppread", "docxwasm", "gridwasm"]

[workspace.package]
version = "0.4.0"
edition = "2024"
# MSRV is driven by dependencies (darling/image/instability need 1.88).
rust-version = "1.88"
license = "MIT"
authors = ["yeroo"]
repository = "https://github.com/yeroo/docxy"

# Accepted style choices (not bugs) so CI can run `clippy -D warnings`:
#  - index loops over parallel grids/columns read clearer than iterator combinators
#  - XmlParser::next is a pull-parser step returning Event, not an Iterator
[workspace.lints.clippy]
needless_range_loop = "allow"
explicit_counter_loop = "allow"
should_implement_trait = "allow"
field_reassign_with_default = "allow"
# Nested `if let { if … }` reads clearer than edition-2024 let-chains here.
collapsible_if = "allow"
# `Block::Paragraph` is the dominant variant by far, so boxing it to equalize
# variant sizes would just add an allocation to the hot path for no real win.
large_enum_variant = "allow"
