[package]
name = "gridcore"
description = "Dependency-free XLSX (SpreadsheetML) engine: workbook model, lossless I/O, and an Excel-compatible formula/recalculation engine."
# Versioned independently of the docxy/docxcore release train.
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../README.md"
keywords = ["xlsx", "excel", "spreadsheet", "ooxml", "formula"]
categories = ["parser-implementations", "mathematics"]

[lints]
workspace = true

[dependencies]
# Intentionally std-only — keep this crate pure and auditable. The one
# dependency is our own shared OPC container layer (also std-only).
opccore = { version = "0.1.0", path = "../opccore" }
