[package]
name = "opccore"
description = "Dependency-free OPC container plumbing shared by docxcore and gridcore: ZIP read/write, DEFLATE, and a minimal XML pull parser."
# Versioned independently of the docxy/docxcore release train.
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../README.md"
keywords = ["ooxml", "opc", "zip", "deflate", "xml"]
categories = ["parser-implementations", "compression"]

[lints]
workspace = true

[dependencies]
# Intentionally std-only — keep this crate pure and auditable.
