[package]
name = "ribboncore"
description = "Ribboncore — the shared Word/Outlook-style ribbon widget for the office TUIs (docxy/xlsxy/yppxy/lookxy): one generic Ribbon<Act> with the layout, mouse hit-testing, keyboard navigation, and accent-coloured rendering, so a change lands in every app at once."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["tui", "ribbon", "toolbar", "ratatui", "widget"]
categories = ["command-line-utilities"]

[lints]
workspace = true

[dependencies]
ratatui = "0.30"
