[package]
name = "wordcomshim"
description = "Wordcomshim — a Windows COM server that impersonates Word.Application so apps automating Office over COM can create .docx files without Microsoft Word installed, backed by the docxcore engine."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

# One library, built two ways: an rlib the LocalServer32 .exe links, and a cdylib
# (.dll) InprocServer32. Mirrors xlcomshim.
[lib]
name = "wordcomshim"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "wordcomshim"
path = "src/main.rs"

[lints]
workspace = true

# Windows-only: the whole server compiles to a stub on other targets.
[target.'cfg(windows)'.dependencies]
comshimcore = { path = "../comshimcore" }
docxcore = { path = "../docxcore" }
windows-core = "0.58"
windows = { version = "0.58", features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_UI_WindowsAndMessaging",
] }

# The oracle differential test (tests/typelib_faithful.rs) introspects both Word's
# registered typelib and our generated one via the same COM APIs.
[target.'cfg(windows)'.dev-dependencies]
windows-core = "0.58"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
] }
