[package]
name = "yppxy"
description = "Yppxy — a fast terminal (TUI) viewer and editor for project schedules, with a Critical Path Method engine and a live terminal Gantt chart."
# Versioned independently of the docxy/docxcore release train.
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../README.md"
keywords = ["project", "gantt", "scheduling", "tui", "mspdi"]
categories = ["command-line-utilities"]

[[bin]]
name = "yppxy"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# Path + version so `yppxy` can be published once `projcore` is on crates.io.
projcore = { version = "0.1.0", path = "../projcore" }
# ratatui re-exports crossterm, so we don't depend on crossterm separately.
ratatui = "0.29"
# Display-column widths for correct alignment + truncation with wide glyphs.
unicode-width = "0.2"
