[package]
name = "docxy"
description = "docxy — the doc-centric desktop suite: docs / sheets / mail in tabs, on GPUI."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "docxy"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
docxcore = { path = "../../docxcore" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
